# test-app

./: CMakeLists.txt  server.kdev4
client/: CMakeLists.txt  chat_client.cpp  chat_client.h  main.cpp
server/: CMakeLists.txt  chat_participant.hpp  chat_room.cpp  chat_room.hpp  chat_server.cpp  chat_server.hpp  chat_session.cpp  chat_session.hpp  main.cpp
shared/: CMakeLists.txt  chat_message.cpp  chat_message.hpp
